Added general logging

--- a/Itbeard.Data/Itbeard.Data.csproj
+++ b/Itbeard.Data/Itbeard.Data.csproj
@@ -15,4 +15,8 @@
       <Folder Include="Migrations" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Itbeard.Core\Itbeard.Core.csproj" />
+    </ItemGroup>
+
 </Project>
